# Multiplayer-Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
src/: main.c
src/Utility/: LinkedList.h  RandomUtility.c  RandomUtility.h  Vector.h
src/client/: Client.c  Client.h  ConnectMenu.c  ConnectMenu.h  QueueAPI.c  QueueAPI.h  QueueMenu.c  QueueMenu.h  SnakesGame.c  SnakesGame.h  StartGame.c  StartGame.h
src/client/API/: ClientAPI.c  ClientAPI.h  QueueAPI.c
src/client/template/: ClientLayout.c  ClientLayout.h
src/server/: Food.c  Food.h  Game.c  Game.h  QueueToPlay.c  QueueToPlay.h  Server.c  Server.h  ServerHandle.c  ServerHandle.h  Snake.c  Snake.h  SnakeMove.c  SnakeMove.h  server.c  server.h
src/server/API/: ServerQueueAPI.c  ServerQueueAPI.h  SnakesAPI.c  SnakesAPI.h
src/settings/: GameSettings.h
src/snakes-components/: CharactersDefinition.h  Food.c  Food.h  Game.c  Game.h  GameBoard.c  GameBoard.h  Snake.c  Snake.h
src/template/: ClientLayout.c  ClientLayout.h  GameSettings.h  WindowProperties.h
src/utility/: General.c  General.h  LinkedList.c  LinkedList.h  RandomUtility.c  RandomUtility.h  Serialize.c  Serialize.h  Vector.c  Vector.h
